--- a/force-app/main/default/lwc/personalInformationForm/personalInformationForm.html
+++ b/force-app/main/default/lwc/personalInformationForm/personalInformationForm.html
@@ -11,7 +11,7 @@
            </lightning-layout-item>
         </lightning-layout>
                <lightning-button-group>
-                <lightning-button label ="Submit" onclick={submitFormEventButton}> the data is suubmitted : {submit} </lightning-button>
+                <lightning-button label ="Submit" onclick={submitFormEventButton}> the daata is suubmitted : {submit} </lightning-button>
             </lightning-button-group>
             <lightning-button label ="Reveiw Information" onclick={reviewResults}> </lightning-button>
             <lightning-card>
